--- a/app/src/main/res/layout/card_city.xml
+++ b/app/src/main/res/layout/card_city.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:ellipsize="end"
-    android:maxLines="1"
-    android:paddingBottom="@dimen/city_card_padding"
-    android:paddingEnd="@dimen/city_card_padding"
-    android:paddingStart="@dimen/city_card_padding"
-    android:paddingTop="@dimen/city_card_padding"
-    tools:text="City" />
+
+<layout>
+
+    <data>
+        <variable
+            name="city"
+            type="com.gokhanaliccii.citylist.data.model.City" />
+    </data>
+
+    <android.support.v7.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingBottom="@dimen/city_card_padding"
+        android:paddingEnd="@dimen/city_card_padding"
+        android:paddingStart="@dimen/city_card_padding"
+        android:paddingTop="@dimen/city_card_padding"
+        android:text="@{city.displayName}"
+        tools:text="City" />
+
+</layout>
