--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -2,6 +2,14 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.gokhanaliccii.citylist.ui.citylist.CityViewModel" />
+
+    </data>
+
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,7 +31,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_cities"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
