Detail page router created and binding view released after view destroys

--- a/app/src/main/res/layout/fragment_city_list.xml
+++ b/app/src/main/res/layout/fragment_city_list.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.gokhanaliccii.citylist.ui.citylist.CityViewModel" />
+            type="com.gokhanaliccii.citylist.ui.cities.citylist.CityViewModel" />
 
     </data>
 
